# cargo-features = ["profile-rustflags"]

[package]
name = "kernel"
version = "0.1.0"
authors = ["Peixin Tsang <893522573@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.6"
bitflags = "1.2.1"
xmas-elf = "0.7.0"
log = "0.4"
hashbrown = "0.14"
intrusive-collections = { version = "0.9", features = ["nightly"] }
riscv = { path = "../dependencies/riscv", features = ["inline-asm"] }
virtio-drivers = { path = "../dependencies/virtio-drivers" }
async-task = { path = "../dependencies/async-task", default-features = false }
fu740-pac = { path = "../dependencies/fu740-pac" }
fu740-hal = { path = "../dependencies/fu740-hal" }

[features]
# default = ["stack_trace", "board_qemu", "kernel_interrupt"]
# default = ["stack_trace", "board_qemu", "user_spin"]
default = ["stack_trace", "board_qemu", "kernel_interrupt", "multi_hart"]
board_qemu = []
stack_trace = []
kernel_interrupt = []
user_spin = []
strace = []
multi_hart = []

[profile.release]
debug = true
# rustflags = ["-C", "relocation-model=pic"]
[source.crates-io]
replace-with = "vendored-sources"

[source.vendored-sources]
directory = "vendor"
