# cargo-features = ["profile-rustflags"]

[package]
name = "kernel"
version = "0.1.0"
authors = ["Peixin Tsang <893522573@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.6"
bitflags = "1.2.1"
xmas-elf = "0.7.0"
log = "0.4"
hashbrown = "0.14"
rand_core = "0.6.4"
# intrusive-collections = { version = "0.9", features = ["nightly"] }
smoltcp = { version = "0.10.0", default-features = false, features = [
    "log",
    "medium-ethernet",
    # "medium-ip",
    # "phy-raw_socket",
    "proto-ipv4",
    "proto-ipv4-fragmentation",
    "socket-raw",
    "socket-udp",
    "socket-tcp",
    "async",
] }
async-task = { version = "4.4.0", default-features = false }
# async-task = { path = "../dependencies/async-task", default-features = false }
riscv = { path = "../dependencies/riscv", features = ["inline-asm"] }
virtio-drivers = { path = "../dependencies/virtio-drivers" }
fu740-pac = { path = "../dependencies/fu740-pac" }
fu740-hal = { path = "../dependencies/fu740-hal" }


[features]
# default = ["stack_trace", "board_qemu", "kernel_interrupt", "multi_hart"]
# default = ["stack_trace", "board_qemu", "kernel_interrupt", "tmpfs"]
default = ["stack_trace", "kernel_interrupt"]
board_qemu = []
board_u740 = []
stack_trace = []
kernel_interrupt = []
user_spin = []
strace = []
multi_hart = []
submit = []
async_flush = []
tmpfs = []
preliminary = []

[profile.release]
debug = true
# rustflags = ["-C", "relocation-model=pic"]
[source.crates-io]
replace-with = "vendored-sources"

[source.vendored-sources]
directory = "vendor"
