# cargo-features = ["profile-rustflags"]

[package]
name = "kernel"
version = "0.1.0"
authors = [
    "Peixin Tsang <893522573@qq.com>",
    "Straho Chen <Straho@163.com>",
    "ghj1222 <rqj.rac.hel@gmail.com>",
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.6"
bitflags = "1.2.1"
xmas-elf = "0.7.0"
log = "0.4"
hashbrown = "0.14"
rand_core = "0.6.4"
# intrusive-collections = { version = "0.9", features = ["nightly"] }
smoltcp = { version = "0.10.0", default-features = false, features = [
    "alloc",
    "log",
    "medium-ethernet",
    "medium-ip",
    "proto-ipv4",
    "proto-ipv6",
    "proto-dhcpv4",
    "proto-ipv4-fragmentation",
    "socket-udp",
    "socket-tcp",
    "socket-dhcpv4",
    "async",
] }
async-task = { version = "4.4.0", default-features = false }
managed = { version = "0.8", default-features = false, features = ["map"] }
riscv = { path = "../dependencies/riscv", features = ["inline-asm"] }
# virtio-drivers = { path = "../dependencies/virtio-drivers" }
virtio-drivers = { version = "0.6.0" }
device_tree = { git = "https://github.com/rcore-os/device_tree-rs", rev = "2fa8411c" }

[features]
# default = ["stack_trace", "board_qemu", "kernel_interrupt", "multi_hart"]
# default = ["stack_trace", "board_qemu", "kernel_interrupt", "tmpfs"]
default = ["kernel_interrupt"]
# default = ["kernel_interrupt", "board_u740"]
stack_trace = []
board_qemu = []
board_u740 = []
kernel_interrupt = []
strace = []
multi_hart = []
submit = []
async_flush = []      # flush dirty blocks to disk asynchronously
tmpfs = []            # rootfs is tmpfs
preliminary = []

[profile.release]
debug = true
# rustflags = ["-C", "relocation-model=pic"]
[source.crates-io]
replace-with = "vendored-sources"

[source.vendored-sources]
directory = "vendor"
