[package]
name = "os"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.6"
bitflags = "1.2.1"
xmas-elf = "0.7.0"
log = "0.4"
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "4ee80e5" }
async-trait = "0.1.53"
async-task = { path = "../dependencies/async-task", default-features = false }
easy-fs = { path = "../dependencies/easy-fs" }
# fatfs temporarily
fatfs = { path = "../dependencies/rust-fatfs", default-features = false, features = ["lfn", "alloc"] }
# futures = "0.3"

[features]
# default = []
default = ["stack_trace", "board_qemu"]
board_qemu = []
stack_trace = []

[profile.release]
debug = true
