# cargo-features = ["profile-rustflags"]

[package]
name = "os"
version = "0.1.0"
authors = ["Peixin Tsang <893522573@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { path = "../dependencies/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.6"
bitflags = "1.2.1"
xmas-elf = "0.7.0"
log = "0.4"
virtio-drivers = { path = "../dependencies/virtio-drivers" }
async-task = { path = "../dependencies/async-task", default-features = false }
easy-fs = { path = "../dependencies/easy-fs" }
fatfs = { path = "../dependencies/rust-fatfs", default-features = false, features = [
    "lfn",
    "alloc",
] }
fu740-pac = { path = "../dependencies/fu740-pac" }
fu740-hal = { path = "../dependencies/fu740-hal" }

[features]
# default = []
default = ["stack_trace", "board_qemu"]
board_qemu = []
stack_trace = []

[profile.release]
debug = true
# rustflags = ["-C", "relocation-model=pic"]
