[package]
name = "user_lib"
version = "0.1.0"
authors = ["Peixin Tsang <893522573@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator = "0.6"
bitflags = "1.2.1"
# buddy_system_allocator = "0.9"

[profile.release]
debug = true

[features]
preliminary = []
# board_qemu = []
# board_k210 = []